refactored code, optimize request to db